# fais

./: AGENTS.md  README.md  build.sh  do.py  e2e_test.sh  fais.py  install-dev.sh  install-locally.sh  main.py  pyproject.toml  test.sh  test_display.sh  test_e2e.sh  test_unit.sh
.agents/skills/rich-visual-print/: SKILL.md
.agents/skills/testing/: SKILL.md
.cursor/rules/: tests.mdc
libs/: fais.py
libs/cli/: parse_args.py
libs/contexteng/: agents_md_resolver.py  prompt_builder.py
libs/display/: print_debug.py  print_info.py  terminal_printer.py
libs/tools/: documents.py  fileexplorer.py  internet.py  planning.py  thunderbird.py
libs/ui/: print_langchain_chunk.py
libs/utils/: dates.py  filewalker.py  textdates.py  webscraper.py  xmlzip.py
templates/docx-updater/: main.py  pyproject.toml  test.docx  test_copy.docx
templates/libreoffice-read-write/: .README.md.un~  README.md  open-file.py  pyproject.toml
templates/libreoffice-read-write/tests/: hello_copy.odt
templates/python-cli-uv/: README.md  install-locally.sh  main.py  pyproject.toml
templates/python-cli-uv/tests/: test.py
tests/: test_dates.py  test_do.py  test_planning.py
tests/assets/: champ.docx  champ_copy.docx
tests/assets/filewalker/: file1.txt
tests/contexteng/: test_agents_md.py
tests/display/: test_print_debug.py  test_print_langchain_chunk.py
tests/e2e/: test_do.py  test_fais.py  test_hil.py
tests/tools/: test_documents.py
tests/tools/assets/: foo.odt
tests/unit/cli/: test_parse_args.py
tests_e2e/: test_fais.py  test_print_langchain_chunk.py  test_trajectory.py
(+12 files in other folders)
