[project]
name = "lbke-ai-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-mistralai>=1.1.1",
    "langgraph-cli[inmem]>=0.4.12",
]

[tool.setuptools.packages.find]
# TODO: it's probably better to move "fais.py" into "cli" or "libs" or whatever
include = ["libs*", "*.py"]

[project.scripts]
fais = "fais:main"
