[project]
name = "fais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-mistralai>=1.1.1",
    "langgraph-cli[inmem]>=0.4.12",
    "rich>=14.3.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*"]

[dependency-groups]
dev = [
    "agentevals>=0.0.9",
]

[project.scripts]
fais = "libs.fais:main"
